Update .coderabbit.yaml to enable request changes workflow and disable related PRs

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -6,6 +6,8 @@ reviews:
   high_level_summary: true
   review_status: true
   commit_status: true
+  request_changes_workflow: true
+  related_prs: false
   collapse_walkthrough: true
   sequence_diagrams: true
   path_filters:
